--- a/ColBioProject_ZIMMERMAN_FRENZE_STONEFIELD_LANG_URBANOWICZ_MORALES.qmd
+++ b/ColBioProject_ZIMMERMAN_FRENZE_STONEFIELD_LANG_URBANOWICZ_MORALES.qmd
@@ -4,17 +4,27 @@ format: html
 editor: visual
 ---
 
-## Load Data
-
-```{r}
-# ian
-```
-
 ## Load Packages
 
 ```{r}
-# everyone add as needed
+# Everyone as needed:
+library(tidyverse)
 ```
+
+## Load Data
+
+```{r}
+# Ian
+# Pull data from https://github.com/Stoney044/Ebird_IPEDS
+
+EB_url <- "https://raw.githubusercontent.com/Stoney044/Ebird_IPEDS/main/EBbird.csv"
+IP_url <- "https://raw.githubusercontent.com/Stoney044/Ebird_IPEDS/main/IPEDS.csv"
+
+# Load the data
+Ebird <- read_csv(EB_url)
+IPEDS <- read_csv(IP_url)
+```
+
 
 ## Bird Species Richness per Campus (2)
 
